syntax = "proto3";

option java_package = "net.leibi.dataservice2.grpc";
option java_multiple_files = true;
option java_generic_services = true;

message DataRequest {
  // a name to greet, default is "World"
  optional string name = 1;
}

message DataResponse {
  string name = 1;
  float value = 2;
}

service GrpcDataService {
  rpc GetData(stream DataRequest) returns (stream DataResponse);
}